@@ -1,11 +1,9 @@
 package com.lothrazar.simpletomb.helper;
 
-import java.util.ArrayList;
-import java.util.List;
-import com.lothrazar.library.core.BlockPosDim;
-import com.lothrazar.library.util.BlockPosUtil;
 import com.lothrazar.simpletomb.ConfigTomb;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.GlobalPos;
+import net.minecraft.util.FastColor;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.GameRules;
@@ -13,6 +11,9 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.border.WorldBorder;
+
+import java.util.ArrayList;
+import java.util.List;
 
 public class WorldHelper {
 
@@ -33,7 +34,7 @@ public class WorldHelper {
     return blockState.isAir() || blockState.getBlock() == Blocks.WATER; // && fluidHere.getFluid().isIn(FluidTags.WATER));
   }
 
-  public static BlockPosDim findGraveSpawn(final Player player, final BlockPos initPos) {
+  public static GlobalPos findGraveSpawn(final Player player, final BlockPos initPos) {
     final int xRange = ConfigTomb.HSEARCHRANGE.get();
     final int yRange = ConfigTomb.VSEARCHRANGE.get();
     final int zRange = ConfigTomb.HSEARCHRANGE.get();
@@ -43,7 +44,7 @@ public class WorldHelper {
     if (isValidPlacement(level, initPos)
         && isValidSolid(level, initPos)) {
       //      ModTomb.LOGGER.info(" initPos is enough =  " + initPos);
-      return new BlockPosDim(initPos, level);
+      return new GlobalPos(level.dimension(), initPos);
     }
     //
     //    ModTomb.LOGGER.info(isValidINIT + "find initPos=  " + initPos);
@@ -74,18 +75,26 @@ public class WorldHelper {
     BlockPos found = null;
     if (positionsWithSolidBelow.size() > 0) {
       //use this one 
-      BlockPosUtil.sortByDistance(initPos, positionsWithSolidBelow);
-      found = positionsWithSolidBelow.get(0);
+      sortByDistance(initPos, positionsWithSolidBelow);
+      found = positionsWithSolidBelow.getFirst();
     }
     else if (positions.size() > 0) {
       //i guess it has to float in the air
-      BlockPosUtil.sortByDistance(initPos, positions);
-      found = positions.get(0);
+      sortByDistance(initPos, positions);
+      found = positions.getFirst();
     }
     else {
       return null;
     }
-    return new BlockPosDim(found, level);
+    return new GlobalPos(level.dimension(), found);
+  }
+
+  private static void sortByDistance(final BlockPos initPos, List<BlockPos> positions) {
+    positions.sort((pos0, pos1) -> {
+      double dist0 = Math.sqrt(pos0.distSqr(initPos));
+      double dist1 = Math.sqrt(pos1.distSqr(initPos));
+      return Double.valueOf(dist0).compareTo(dist1);
+    });
   }
 
   private static boolean isValidSolid(Level level, BlockPos myPos) {
@@ -133,5 +142,70 @@ public class WorldHelper {
 
   public static boolean placeGrave(Level level, BlockPos pos, BlockState state) {
     return level.setBlock(pos, state, 2);
+  }
+
+  public static boolean isNight(Level level) {
+    float angle = level.getSunAngle(0.0F);
+    return angle >= 0.245F && angle <= 0.755F;
+  }
+
+  public static float[] getHSBtoRGBF(float hue, float saturation, float brightness) {
+    int r = 0;
+    int g = 0;
+    int b = 0;
+    if (saturation == 0.0F) {
+      r = g = b = (int) (brightness * 255.0F + 0.5F);
+    }
+    else {
+      float h = (hue - (float) Math.floor(hue)) * 6.0F;
+      float f = h - (float) Math.floor(h);
+      float p = brightness * (1.0F - saturation);
+      float q = brightness * (1.0F - saturation * f);
+      float t = brightness * (1.0F - saturation * (1.0F - f));
+      switch ((int) h) {
+        case 0:
+          r = (int) (brightness * 255.0F + 0.5F);
+          g = (int) (t * 255.0F + 0.5F);
+          b = (int) (p * 255.0F + 0.5F);
+          break;
+        case 1:
+          r = (int) (q * 255.0F + 0.5F);
+          g = (int) (brightness * 255.0F + 0.5F);
+          b = (int) (p * 255.0F + 0.5F);
+          break;
+        case 2:
+          r = (int) (p * 255.0F + 0.5F);
+          g = (int) (brightness * 255.0F + 0.5F);
+          b = (int) (t * 255.0F + 0.5F);
+          break;
+        case 3:
+          r = (int) (p * 255.0F + 0.5F);
+          g = (int) (q * 255.0F + 0.5F);
+          b = (int) (brightness * 255.0F + 0.5F);
+          break;
+        case 4:
+          r = (int) (t * 255.0F + 0.5F);
+          g = (int) (p * 255.0F + 0.5F);
+          b = (int) (brightness * 255.0F + 0.5F);
+          break;
+        case 5:
+          r = (int) (brightness * 255.0F + 0.5F);
+          g = (int) (p * 255.0F + 0.5F);
+          b = (int) (q * 255.0F + 0.5F);
+      }
+    }
+    return new float[] {
+            r / 255.0F,
+            g / 255.0F,
+            b / 255.0F,
+    };
+  }
+
+  public static float[] getRGBColor3F(int color) {
+    return new float[] {
+            FastColor.ABGR32.red(color) / 255.0F,
+             FastColor.ABGR32.green(color) / 255.0F,
+             FastColor.ABGR32.blue(color) / 255.0F,
+    };
   }
 }
